--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ body{
 
 .title{
   /* padding-top: 50px; */
-  top: 380px;
+  top: 330px;
   position: absolute;
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
@@ -430,6 +430,12 @@ img{
   font-size: 20px;
   color: #fcc883;
   margin: 10px;
+}
+
+.detail-abs1 .pengantin-profpic,
+.detail-abs .pengantin-profpic{
+  width:150px;
+  height: auto;
 }
 
 .detail-abs1 .nama,
@@ -1182,7 +1188,7 @@ input[type="radio"] {
     height: 18px;
     border: 1px solid #fcc883;
     border-radius: 100%;
-    background: #fcc883;
+    background: black;
 }
 
 [type="radio"]:checked + label:after,
@@ -1266,18 +1272,20 @@ input[type="radio"] {
 .trigger,.btn-rek{
   text-align: center;
   padding: 7px 13px;
-  background: #3e3e3e;
-  color: #fff;
+  background: transparent;
+  color: #fcc883;
   font-size: 15px;
   outline: none;
-  border: none;
+  border: solid 1px #fcc883;
   border-radius: 5px;
-  font-family: cursive;
+  font-family: 'Playfair Display', serif;
+  font-weight: lighter;
+  font-size: 20px;
 }
 
 .btn-rek:hover{
-  color: #3e3e3e;
-  background: #fff;
+  color: #fcc883;
+  background: #454545;
 }
 
 .modal {
