--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ img{
 .content-top h2{
   font-family: 'Playfair Display', serif;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: 17px;
   color: #fcc883;
   z-index: 1;
 }
@@ -377,7 +377,7 @@ img{
 .content-top h4{
   font-family: 'Playfair Display', serif;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: 17px;
   color: #fcc883;
 }
 
@@ -427,7 +427,7 @@ img{
 .detail-abs p{
   font-family: 'Playfair Display', serif;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: 17px;
   color: #fcc883;
   margin: 10px;
 }
@@ -847,7 +847,7 @@ font-size: 40px;
   opacity: 1;
   transition: 1s;
   color: #fcc883;
-  font-size: 20px;
+  font-size: 18px;
   font-family: 'shafron';
 }
 
@@ -1131,7 +1131,7 @@ font-size: 40px;
   line-height: 20px;
   font-family: 'Playfair Display', serif;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 .form-rsvp{
@@ -1280,7 +1280,7 @@ input[type="radio"] {
   border-radius: 5px;
   font-family: 'Playfair Display', serif;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 .btn-rek:hover{
@@ -1424,10 +1424,11 @@ input[type="radio"] {
   background: transparent;
   border: #fcc883 1px solid ;
   font-size: 20px;
-  font-family: 'Redressed', cursive;
   margin-bottom: 20px;
   cursor: pointer;
   color: #fcc883;
+  font-family: 'Playfair Display', serif;
+  font-weight: lighter;
 }
 
 .box button:hover{
